--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
 
     </header>
 
-    <section class="banner"></section>
+    <section class="banner">
+        <img src="assets/images/logo.png" alt="" width="100%" height="100%">
+    </section>
 
     <!NOSOTROS-->
 
